# assert-text

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
src/: lib.rs
test-helper/: .gitignore  Cargo.toml  build.rs
test-helper/fixtures/: text1.txt  text2.txt  text3.txt  text4.txt  text5.txt
test-helper/src/: main.rs  t.rs
test-helper/tests/: test.rs
tests/: test01.rs
