[package]
name = "assert-text"
version = "0.2.8"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
the testing macro tools.
"""
keywords = ["assert", "text"]
categories = ["development-tools::testing", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/assert-texts"

[dependencies]
difference = "2.0"
regex = "1.7"

[workspace]
members = ["test-helper"]
